Image uploaded, lorem ipsum

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
         <title>Preview Card component.</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <h2>welcome to this dick</h2>
-        
+        <div class="container">
+            <img src="images/image-product-desktop.jpg" alt="PERFUME">      
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat nobis, consequatur, vel soluta delectus pariatur illo voluptates ipsa iure eius itaque quas harum maiores facilis suscipit praesentium tenetur debitis temporibus.
+            </p>
+        </div>
         
         <script src="" async defer></script>
     </body>
